Fixed alignment issues with site title

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,8 @@
     color: #777;
     display: inline-block;
     float: left;
-    font-size: 28px;
+    font-size: 24px;
+    line-height: normal;
     text-decoration: none;
 }
 
